--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -142,6 +142,11 @@
         transform: scale(1.0);
     }
 
+    .owl-carousel .owl-nav button.owl-prev:focus, 
+.owl-carousel .owl-nav button.owl-next:focus {
+    outline: black; /* Changes the focus outline to black */
+}
+
     .progress-container {
         width: 100%;
         background-color: #ddd;
