fix deploy issues

--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -143,9 +143,9 @@
     }
 
     .owl-carousel .owl-nav button.owl-prev:focus, 
-.owl-carousel .owl-nav button.owl-next:focus {
-    outline: black; /* Changes the focus outline to black */
-}
+    .owl-carousel .owl-nav button.owl-next:focus {
+        outline: black; 
+    }
 
     .progress-container {
         width: 100%;
