--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -437,21 +437,21 @@ body, p {
 
 .owl-carousel .owl-nav button.owl-prev, 
 .owl-carousel .owl-nav button.owl-next {
-    background-color: white; /* Arrow background to white */
-    color: black; /* Arrow icon to black */
+    background-color: white; 
+    color: black;
 }
 
 .owl-carousel .owl-nav button.owl-prev > *, 
 .owl-carousel .owl-nav button.owl-next > * {
-    color: black; /* Icons inside buttons to black */
+    color: black; 
 }
 
 .owl-carousel .owl-nav button.owl-prev:hover, 
 .owl-carousel .owl-nav button.owl-next:hover,
 .owl-carousel .owl-nav button.owl-prev:hover > *, 
 .owl-carousel .owl-nav button.owl-next:hover > * {
-    background-color: #cf6094; /* Hover background to pink */
-    color: white; /* Hover icon to white */
+    background-color: #cf6094; 
+    color: white; 
 }
 
 .owl-nav button.owl-prev {
@@ -464,7 +464,7 @@ body, p {
 
 .owl-nav button.owl-prev:hover, 
 .owl-nav button.owl-next:hover {
-    background-color: #cf6094; /* Light pink background on hover */
+    background-color: #cf6094; 
 }
 
 @media (max-width: 1024px) {
@@ -1006,29 +1006,28 @@ body, p {
     }
 
     .owl-nav button.owl-prev, .owl-nav button.owl-next {
-        position: static;  /* Allow buttons to sit within the flow of the document */
-        display: inline-block;  /* Line up buttons next to each other */
-        margin: 10px;  /* Add some margin for spacing */
+        position: static;  
+        display: inline-block; 
+        margin: 10px;  
         top: auto;
         transform: none;
         left: auto;
         right: auto;
-        width: 40px;  /* Smaller size for mobile */
+        width: 40px;  
         height: 40px;
         line-height: 40px;
     }
 
     .owl-nav {
-        text-align: center;  /* Center the buttons below the carousel */
+        text-align: center;  
     }
 
-    /* Adjust the container for the slides to allow some space for the buttons below */
     .owl-carousel {
-        margin-bottom: 60px; /* Space below the carousel for the buttons */
+        margin-bottom: 60px;
     }
 
     .carousel-wrapper {
-        padding: 30px 0;  /* Reduce top and bottom padding */
+        padding: 30px 0;  
     }
 }
 
