mobile responsive fix

--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1029,6 +1029,41 @@ body, p {
     .carousel-wrapper {
         padding: 30px 0;  
     }
+
+    .carousel-content {
+        max-width: 95%; 
+        margin: 0 auto;
+    }
+
+    .slide {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* Vertically centers content */
+        align-items: center; /* Horizontally centers content */
+        min-height: 300px; /* Adjust this to fit your content size */
+        text-align: center;
+    }
+
+    .owl-carousel .item {
+        display: flex;
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: center; /* Center vertically */
+        align-items: center; /* Center horizontally */
+        min-height: 300px; /* Ensure a minimum height for the slide */
+        padding: 20px; /* Padding for a balanced look */
+        text-align: center; /* Center text */
+    }
+
+    .owl-carousel .item p {
+        margin: 10px 0; /* Add some spacing between the paragraphs */
+        width: 100%; /* Ensure text spans the width of the slide */
+    }
+
+    .format-home {
+        margin-top: 15px; /* Add margin between the testimonial text and the "Testimonials from our participants" */
+    }
+
+    
 }
 
 @media (max-width: 480px) {
